[layout] add new sections, fix font title and fixes <code> overflow

--- a/css/base.css
+++ b/css/base.css
@@ -45,10 +45,17 @@ code {
   background-color: #F4F4E8;
   padding: 18px 12px;
   display: block;
+  font-size: 15px;
+  overflow-x: scroll;
+  white-space: pre;
 }
 
 a, a:visited, a:hover {
   color: #406701;
+}
+
+h2, h3 {
+  font-family: 'europa', sans-serif;
 }
 
 h2 {
@@ -109,6 +116,7 @@ h2.header-title {
   text-transform: none;
   padding: 0;
   margin: 10px 0 0;
+  font-family: "museo-slab",serif;
 }
 
 a.get-bs {
@@ -225,7 +233,8 @@ a.extra-nav-link {
 }
 
 #news p {
-  margin-top: 4px;
+  margin: 0 0 20px;
+  line-height: 1.5em;
 }
 
 #news a.get-bs {
@@ -239,6 +248,7 @@ a.more-news{
 /* USAGE */
 
 h2.grid-title {
+  font-weight: 500;
   width: 440px;
   margin: 0 auto;
   margin-bottom: 1.5em;
@@ -317,6 +327,7 @@ h3.features-title {
   text-transform: uppercase;
   font-size: 20px;
   margin: 35px 0 8px 0;
+  font-weight: 700;
 }
 
 p.features-tagline {
